refactor(language level): use Files.writeString instead of Files.write